server.log
   Compiling opencode-mem-storage v0.1.0 (/home/stranmor/projects/opencode-mem/crates/storage)
error[E0425]: cannot find value `sanitized` in this scope
 --> crates/storage/src/pg_storage/search/utils.rs:7:16
  |
7 |             if sanitized.is_empty() || !sanitized.chars().any(char::is_alphanumeric) {
  |                ^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `sanitized` in this scope
 --> crates/storage/src/pg_storage/search/utils.rs:7:41
  |
7 |             if sanitized.is_empty() || !sanitized.chars().any(char::is_alphanumeric) {
  |                                         ^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `sanitized` in this scope
  --> crates/storage/src/pg_storage/search/utils.rs:10:38
   |
10 |                 Some(format!("{}:*", sanitized))
   |                                      ^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `sanitized` in this scope
  --> crates/storage/src/pg_storage/search/utils.rs:29:16
   |
29 |             if sanitized.chars().count() < 2 || !sanitized.chars().any(char::is_alphanumeric) {
   |                ^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `sanitized` in this scope
  --> crates/storage/src/pg_storage/search/utils.rs:29:50
   |
29 |             if sanitized.chars().count() < 2 || !sanitized.chars().any(char::is_alphanumeric) {
   |                                                  ^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `sanitized` in this scope
  --> crates/storage/src/pg_storage/search/utils.rs:32:22
   |
32 |                 Some(sanitized)
   |                      ^^^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `opencode-mem-storage` (lib) due to 6 previous errors
